# Couturier

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
Couturier/: AppDelegate.swift  ViewController.swift
Couturier.xcodeproj/: project.pbxproj
Couturier.xcodeproj/xcuserdata/satrio.xcuserdatad/xcschemes/: xcschememanagement.plist
Couturier/Base.lproj/: Main.storyboard
CouturierTests/: CouturierTests.swift
CouturierUITests/: CouturierUITests.swift
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
