[package]
name = "couturier"
version = "0.1.0"
edition = "2021"

[lib]
name = "couturier_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ttf-parser = "0.24"
rfd = { version = "0.15", default-features = false }
